# text-to-music-prompt-structurer

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  PUBLISHING.md  README.md  example_module_usage.py  pyproject.toml  requirements.txt  structurer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
suno_structurer/: __init__.py  detectors.py  engine.py  formatter.py  loaders.py  models.py  registry.py
tests/: test_engine.py  test_public_api.py
text_to_music_prompt_structurer/: __init__.py  cli.py  detectors.py  engine.py  formatter.py  loaders.py  models.py  registry.py
text_to_music_prompt_structurer/vocab/: energy.json  genres.json  moods.json  structure.json  tempo.json  vocal_tones.json  vocals.json  voice_types.json
vocab/: energy.json  era.json  genres.json  instruments.json  keys.json  languages.json  moods.json  production.json  rhythm.json  structure.json  tempo.json  vocals.json
