[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-music-prompt-structurer"
version = "0.1.1"
description = "Turn free-form musical ideas into structured prompts for text-to-music workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Eduardo J. Barrios" },
]
keywords = ["music", "prompt", "text-to-music", "suno", "music-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.12",
  "twine>=6",
]

[project.urls]
Homepage = "https://github.com/edujbarrios/text-to-music-prompt-structurer"
Documentation = "https://github.com/edujbarrios/text-to-music-prompt-structurer#readme"
Repository = "https://github.com/edujbarrios/text-to-music-prompt-structurer"
Issues = "https://github.com/edujbarrios/text-to-music-prompt-structurer/issues"
Changelog = "https://github.com/edujbarrios/text-to-music-prompt-structurer/blob/main/CHANGELOG.md"

[project.scripts]
text-to-music-prompt = "text_to_music_prompt_structurer.cli:main"

[tool.setuptools.packages.find]
include = ["text_to_music_prompt_structurer*"]

[tool.setuptools.package-data]
text_to_music_prompt_structurer = ["vocab/*.json", "py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
line-ending = "lf"
